--- a/src/html/project.html
+++ b/src/html/project.html
@@ -21,7 +21,7 @@
                         <a href="virtual-exhibits/ve2.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_The Truth Lies in Rostock_ 02.jpg"
-                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
+                                class="absolute h-full w-full object-cover cursor-ve"
                             />
                             <div class="absolute bottom-0 w-full translate-y-full text-right text-xs">
                                 Filmstill aus <span class="italic">The Truth Lies in Rostock</span>/Spectacle
@@ -38,7 +38,7 @@
                         <a href="virtual-exhibits/ve3.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_04.jpg"
-                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
+                                class="absolute h-full w-full object-cover cursor-ve"
                             />
                         </a>
                     </div>
@@ -82,10 +82,10 @@
                 <div class="w-4/5 pl-8">
                     <!-- Image placeholders:  -->
                     <div class="relative aspect-2/3 w-full grayscale transition-[filter] ease-linear hover:bg-slate-400 hover:grayscale-0">
-                        <a href="virtual-exhibits/ve3.html" class="group">
+                        <a href="virtual-exhibits/ve4.html" class="group">
                             <img
                                 src="/public/images/Zaninelli_Jacobs_BROTHERLAND_03.jpg"
-                                class="absolute h-full w-full object-cover group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
+                                class="absolute h-full w-full object-cover cursor-ve"
                             />
                         </a>
                     </div>
@@ -98,7 +98,7 @@
                         <!-- Image placeholders: -->
                         <a href="#" class="group">
                             <div
-                                class="h-full w-full bg-gray-300 group-hover:cursor-[url(/public/images/virtAusstCursor.png),_pointer]"
+                                class="h-full w-full bg-gray-300 cursor-ve"
                             ></div>
                         </a>
                     </div>
