--- a/src/html/interviews/intrvw_ls01.html
+++ b/src/html/interviews/intrvw_ls01.html
@@ -33,28 +33,10 @@
             <include src="./partials/nav.html" locals='{"pathPrefix": "../", "active": "intrvw_dm01"}'></include>
         </header>
 
-        <!-- Main: -->
-        <main class="m-auto">
-            <div id="top-container" class="pt-6">
-                <!-- Macou1 -->
-                <div id="macou1" class="flex flex-row flex-wrap content-between">
-                    <!-- Quote -->
-                    <scope with="text">
-                        <div class="basis-full">
-                            <include src="./partials/interv_quote.html"></include>
-                        </div>
-
-                        <!-- Interview Main -->
-                        <div class="interview-info flex h-full basis-1/2 flex-col items-center justify-start">
-
-                            <!-- Text -->
-                            <include src="./partials/interv_text.html"></include>
-                        </div>
-                        <!-- Image -->
-                        <include src="./partials/interv_img.html"></include>
-                    </scope>
-                </div>
-            </div>
+        <main>
+            <scope with="text">
+                <include src="./partials/interview.html"></include>
+            </scope>
         </main>
     </body>
 
