mouse cursor working

--- a/src/html/virtual-exhibits/ve2.html
+++ b/src/html/virtual-exhibits/ve2.html
@@ -13,17 +13,17 @@
             <!-- Hover links -->
             <div class="absolute h-full w-full">
                 <a
-                    class="absolute left-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="absolute left-0 top-0 z-50 h-full cursor-ve sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
                     href="./ve4.html"
                 ></a>
 
                 <a
-                    class="absolute right-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="absolute right-0 top-0 z-50 h-full cursor-ve sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
                     href="./ve3.html"
                 ></a>
             </div>
 
-            <main class="m-auto flex flex-col font-crimson-text text-xl font-bold">
+            <main class="flex flex-col font-crimson-text text-xl font-bold">
                 <div class="flex h-[40rem]">
                     <div class="relative flex min-h-min basis-1/2 flex-col justify-center pr-1">
                         <span class="pr-20 text-left">
