--- a/src/html/virtual-exhibits/ve3.html
+++ b/src/html/virtual-exhibits/ve3.html
@@ -13,18 +13,18 @@
             <!-- Hover links -->
             <div class="absolute h-full w-full">
                 <a
-                    class="absolute left-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="absolute left-0 top-0 z-50 h-full cursor-ve sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
                     href="./ve2.html"
                 ></a>
 
                 <a
-                    class="absolute right-0 top-0 z-50 h-full hover:cursor-[url(/public/images/75.jpg),_pointer] sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
+                    class="absolute right-0 top-0 z-50 h-full cursor-ve sm:w-1/12 md:w-[10%] lg:w-1/6 xl:w-1/5 2xl:w-1/4"
                     href="./ve4.html"
                 ></a>
             </div>
 
-            <main class="m-auto flex flex-col font-crimson-text text-xl font-bold">
-                <div class="flex h-[76rem] pt-20">
+            <main class="flex flex-col font-crimson-text text-xl font-bold">
+                <div class="flex h-[76rem]">
                     <div class="relative flex h-full basis-1/2 flex-col justify-between pr-1">
                         <!-- Audio -->
                         <div class="z-20 mb-36 flex w-4/5 justify-center rounded-sm bg-gray-900 px-2 py-8">
